[package]
name = "ogg-explorer"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogg = "0.7.0"
rustc-hex = "2.1.0"
tui = { git = "https://github.com/fdehau/tui-rs.git" }
termion = "1.5.5"
rand = "0.7.3"
failure = "0.1.6"
